simulation et dim circ elec

--- a/Import.tex
+++ b/Import.tex
@@ -17,7 +17,9 @@
 \usepackage{tcolorbox}
 \usepackage{siunitx}
 \usepackage[subfigure]{tocloft}
-
+\usepackage{booktabs}
+\usepackage{tabularx}
+\usepackage{array}
 
 \setcounter{tocdepth}{4}
 \setcounter{secnumdepth}{4}
