--- a/Parties/inter.tex
+++ b/Parties/inter.tex
@@ -15,8 +15,7 @@ Le projet a pour objectifs de réaliser l'asservissement d'une machine et d'en c
 
 \vspace{0.5cm}
 
-\textit{
-    Nous serons amenés dans ce rapport à fournir de nombreuses captures d'écran. Pour éviter d’alourdir le document et  faciliter la lecture, nous indiquerons l'origine de chaque capture d'écran dans la \autoref{sec:arb} où le fichier d'origine de chaque figure sera indiquée. Il sera possible de s'y rendre en cliquant sur l’astérisque "*" présente à la fin de chaque titre de figure, et de revenir à la figure en cliquant sur le numéro de cette dernière dans l'arborescence.}
+\textit{Nous serons amenés dans ce rapport à fournir de nombreuses captures d'écran. Pour éviter d’alourdir le document et  faciliter la lecture, nous indiquerons l'origine de chaque capture d'écran dans la \autoref{sec:arb} où le fichier d'origine de chaque figure sera indiquée. Il sera possible de s'y rendre en cliquant sur l’astérisque "*" présente à la fin de chaque titre de figure, et de revenir à la figure en cliquant sur le numéro de cette dernière dans l'arborescence.}
 
 \vspace{2cm}
 
